--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@
     background: white;
     padding: 1.5rem;
     display:grid;
+    grid-template-rows:(1fr 1fr 1fr);
     justify-content: start;
     align-items: center;
     place-items: center;
     border-radius: 5px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
 .icon{
     max-width: 50px;
@@ -26,11 +28,57 @@
 .text{
     text-align: center;
     padding: 10px;
+    padding-top: 20px;
+    display: block;
 
   }
-    
+.learn{
+    text-align: center;
+    padding-bottom: 40px;
+    display: block;
+}    
 
   body {
     margin: 2rem;
     font: 12px system-ui;
   }
+
+ .tableau {max-width: 880px;} 
+
+ .button {
+    text-transform: uppercase;
+    background-color: white;
+    color: black;
+    opacity: 50%;
+    margin-bottom: 5%;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    padding-top: 10%;
+    padding-bottom: 10px;
+    border-top: 0.5px solid gray;
+}
+
+.button:hover {
+    
+	background:linear-gradient(to bottom,blue 5%, #237cce 100%);
+	background-color:#2f6ee4;
+	border-radius:14px;
+	border:1px solid #3866a3;
+	display:inline-block;
+	color:white;
+	font-family:Arial;
+	font-size:16px;
+	font-weight:bold;
+	padding:5px 8px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #7cacde;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+   
+
+}
+
+.tile:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
