--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
+
 .grid {
     
     display: grid;
@@ -26,6 +28,7 @@
   }
   
 .text{
+    font-family:'Roboto', sans-serif;
     text-align: center;
     padding: 10px;
     padding-top: 20px;
@@ -39,6 +42,7 @@
 }    
 
   body {
+    font-family: 'Roboto', sans-serif;
     margin: 2rem;
     font: 12px system-ui;
   }
@@ -67,7 +71,6 @@
 	border:1px solid #3866a3;
 	display:inline-block;
 	color:white;
-	font-family:Arial;
 	font-size:16px;
 	font-weight:bold;
 	padding:5px 8px;
@@ -81,4 +84,51 @@
 .tile:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(232, 239, 255);
+    max-width: 880px;
+  }
+  
+  li {
+    float:left;
+    font-size: large;
+    
+
+
+}
+li a {
+    display: block;
+    color: #2f6ee4;
+    text-align: center;
+    text-decoration: none;
+    padding: 8px;
+    padding-left: 16px;
+
+}
+
+li a:hover {
+    background-color:#7cacde ;
+}
+
+.about {
+float: right;
+padding-right: 16px; 
+}
+.collapsible{
+    background-color: rgb(232, 239, 255);
+    color: #2f6ee4;
+    cursor: pointer;
+    padding: 8px;
+    padding-left: 16px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: large;   
 }
